# dynio

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  temppackage.txt  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vite.config.ts.timestamp-1719309646761-976c0f97a55dc.mjs  vite.config.ts.timestamp-1719489768941-57f85f3e12ecd.mjs
.github/: backup-dependabot.yml  dependabot.yml
.github/workflows/: ci.yml  publish.yml
.svelte-kit/: ambient.d.ts
deprecated/: SingleDisplay.svelte
src/: App.svelte
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: general_settings.rs  main.rs
src-tauri/src/data/: cmd-config-schema.json  default-general-settings.yaml  example-cmd-config-unix.yaml  example-cmd-config-win.yaml  general-settings-schema.json
src/Bar/: DragSpot.svelte  ErrorIndicator.svelte  Indicator.svelte  Input.svelte  InputFocusAction.ts  LeftTile.svelte  StderrIndicator.svelte  indicatorAnimation.css
src/Meta/: AutoUpdater.svelte  Hover.svelte  UncaughtErrors.svelte
src/Tray/: CmdSelector.svelte  ErrorList.svelte  Stderr.svelte  Tray.svelte
src/Tray/Stdout/: EmptyDisplay.svelte  SingleDisplay.svelte  Stdout.svelte
src/Tray/Stdout/ListDisplay/: ListDisplay.svelte  processListOutput.ts  processOutput.ts
src/Tray/Stdout/SingleDisplay/: SingleDisplay.svelte  processSingleOuput.ts  singleDisplay.css
src/assets/: bar.css  glass-effect.css  main.css  scroll-area-debug.css
src/lib/: theme.json
src/lib/Bar/: DragSpot.svelte  Input.svelte  LeftTile.svelte
src/lib/Tray/: ErrorList.svelte  Stderr.svelte  Stdout.svelte  Tray.svelte
src/lib/Tray/Stdout/: EmptyDisplay.svelte  SingleDisplay.svelte
src/lib/Tray/Stdout/ListDisplay/: ListDisplay.svelte  scroll-area-debug.css  vlist.css
src/lib/actions/: focusSync.ts  hotkeys.ts
src/lib/stores/: cmd-config.ts  errors.ts  globals.ts  settings.ts
src/lib/stores/schema/: cmd-config-schema.ts  cmd-config-validate.ts  general-settings-schema.ts  general-settings-validate.ts
src/lib/utils/: ClearablePanel.svelte  ScrollablePanel.svelte  activator.ts  config-file-utils.ts
unsorted/: groq.bat  openai.bat
unsorted/logo-working/: dpmpp_2m_sde-3.0-533809587432751-20-5344.psd
~/.tauri/: myapp.key  myapp.key.pub
